syntax = "proto3";

package product;

service ProductService {
  rpc GetProducts (Empty) returns (ProductList);
}

message Empty {}

message Product {
  int32 id = 1;
  string name = 2;
  double price = 3;
}

message ProductList {
  repeated Product products = 1;
}
